[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/soundon.png" type="Texture" id=1]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/images/right.png" type="Texture" id=4]
[ext_resource path="res://assets/images/plus.png" type="Texture" id=6]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 360.529
margin_right = 321.0
margin_bottom = 694.529
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TouchScreenButton" parent="VBoxContainer"]
visible = false
position = Vector2( 81.8168, 39.9602 )
scale = Vector2( 0.125, 0.125 )
normal = ExtResource( 4 )

[node name="New" type="TouchScreenButton" parent="VBoxContainer"]
process_priority = 1
position = Vector2( 81.9192, 142.205 )
scale = Vector2( 0.125, 0.125 )
normal = ExtResource( 6 )
pressed = ExtResource( 6 )

[node name="New2" type="TextureButton" parent="VBoxContainer"]
visible = false
anchor_left = 0.133333
anchor_top = 0.16
anchor_right = 0.133333
anchor_bottom = 0.16
margin_right = 600.0
rect_scale = Vector2( 0.125, 0.125 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Music" type="TouchScreenButton" parent="VBoxContainer"]
position = Vector2( 79.8687, 233.762 )
scale = Vector2( 0.125, 0.125 )
normal = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="released" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="released" from="VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="button_up" from="VBoxContainer/New2" to="." method="_on_New_pressed"]
[connection signal="pressed" from="VBoxContainer/Music" to="." method="_on_Music_pressed"]
